# Copyright 2009, UCAR/Unidata and OPeNDAP, Inc.
# See the COPYRIGHT file for more information.

AUTOMAKE_OPTIONS = foreign
ACLOCAL_AMFLAGS = -I conf

SUBDIRS = inc src test

MAINTAINERCLEANFILES = Makefile.in ./configure aclocalm4 conf config.h.in

EXTRA_DIST = \
COPYING \
ChangeLog \
INSTALL \
LICENSE \
README \
TODO \
doxyfile \
libs3.spec
