## This is a automake file, part of Unidata's netCDF package.
# Copyright 2010, see the COPYRIGHT file for more information.

# This automake file generates the Makefile to build the include
# directory.

include_HEADERS = libs3.h

noinst_HEADERS = \
error_parser.h \
request.h \
request_context.h \
response_headers_handler.h \
simplexml.h \
string_buffer.h \
util.h
